# dbt-dqlens

./: .gitignore  README.md  dbt_project.yml  packages.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: native-dbt-approach.md
dqlens_dbt/: __init__.py  cli.py  dbt_config.py  findings_writer.py  test_generator.py
examples/: _dqlens_tests_example.yml
macros/: dqlens_generate_tests.sql  dqlens_profile.sql
macros/tests/: test_dqlens_check_all.sql  test_dqlens_empty_strings_native.sql  test_dqlens_freshness_native.sql  test_dqlens_no_empty_strings.sql  test_dqlens_no_null_drift.sql  test_dqlens_no_orphans.sql  test_dqlens_no_outliers.sql  test_dqlens_null_drift_native.sql  test_dqlens_row_count_native.sql  test_dqlens_schema_drift_native.sql
models/: dqlens_baseline.sql  dqlens_findings.sql  dqlens_profile_results.sql
tests/: __init__.py  test_dbt_config_unit.py  test_generator_unit.py  test_integration.py
tests/test_native_project/: .user.yml  dbt_project.yml  profiles.yml
tests/test_native_project/models/: dqlens_baseline.sql  dqlens_profile_results.sql  schema.yml
tests/test_project/: dbt_project.yml  profiles.yml
tests/test_project/models/: customers.sql  orders.sql  sources.yml
