[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-dqlens"
version = "0.3.0"
description = "Data quality for dbt, without writing tests. Auto-generates dbt tests from DQLens profiling."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Vahid", email = "vahid@dqlens.dev"},
]
keywords = ["dbt", "data-quality", "testing", "profiling", "auto-generate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "dqlens>=0.4.0",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "dbt-core>=1.0.0",
    "dbt-postgres>=1.0.0",
]

[project.scripts]
dqlens-dbt = "dqlens_dbt.cli:main"

[project.urls]
Homepage = "https://github.com/vahid110/dbt-dqlens"
Repository = "https://github.com/vahid110/dbt-dqlens"
Issues = "https://github.com/vahid110/dbt-dqlens/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dqlens_dbt*"]
